feat: setup swagger and tsoa decorators
